<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="hello_world">Hello World !</string>
    <string name="hello_world2">Hello World 2 !</string>
    <string name="new_hello">hi android !</string>
    <string name="btn_send">send</string>
    <string name="google_veiw">google view</string>
    <string name="dialing">dial</string>
    <string name="toast">toast view</string>
    <string name="btn_other">btnother</string>
    <string name="finish">finish activity</string>
</resources>
